# level-multilenguaje-microservicios

./: .gitignore  DEMO.md  Documentación_Final.md  LINKEDIN_POST.md  PROJECT_PROFILE.md  Proyecto Multilenguaje.md  README.md  asset-manifest.json  index.html  manifest.json
animaciones/: Sistema_Multilenguaje_Distribuido.jsx
demo-web/: package-lock.json  package.json
demo-web/public/: index.html
demo-web/src/: App.js  index.css
docker/: docker-compose.yml
docs/: architecture.md  language-justification.md  technical-documentation.md
scripts/: demo.sh
services/api-gateway/: Dockerfile  pom.xml
services/api-gateway/src/main/java/com/level/gateway/: ApiGatewayApplication.java
services/api-gateway/src/main/java/com/level/gateway/controller/: GatewayController.java
services/api-gateway/src/main/java/com/level/gateway/dto/: AnalyzeRequest.java
services/api-gateway/src/main/java/com/level/gateway/service/: GoServiceClient.java
services/api-gateway/src/main/resources/: application.yml
services/cpp-service/: CMakeLists.txt  Dockerfile
services/cpp-service/src/: main.cpp
services/go-service/: Dockerfile  go.mod  handlers.go  main.go
services/python-service/: Dockerfile  main.py  requirements.txt
services/rust-service/: Cargo.toml  Dockerfile
services/rust-service/src/: main.rs
static/css/: main.25791904.css  main.25791904.css.map  main.88356751.css  main.88356751.css.map
static/js/: 453.6e0ef8de.chunk.js  453.6e0ef8de.chunk.js.map  main.ce6156ef.js  main.ce6156ef.js.map  main.fe3bfab4.js  main.fe3bfab4.js.map
